--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfo",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://docstone.github.io/portfolio/",
+  "homepage": "https://docstone.github.io/portfolio/",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -13,7 +13,9 @@
     "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
-    "react-scripts": "5.0.1",
+    "react-parallax": "^3.5.1",
+    "react-scripts": "^5.0.1",
+    "react-scroll-parallax": "^3.3.1",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
