--- a/package.json
+++ b/package.json
@@ -10,12 +10,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
-    "react-awesome-reveal": "^4.0.1",
     "react-dom": "^18.1.0",
     "react-icons": "^4.4.0",
-    "react-parallax": "^3.5.1",
     "react-scripts": "^5.0.1",
-    "react-scroll-parallax": "^3.3.1",
+    "react-spring": "^9.5.5",
+    "react-waypoint": "^10.3.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
